[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/pause.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=2]
[ext_resource path="res://fonts/OpenType (.otf)/Fortzilla-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PauseScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
margin_right = 1080.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 283.0
margin_top = 170.0
margin_right = 796.0
margin_bottom = 549.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pausa" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 513.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 3 )
text = "Juego pausado"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 513.0
margin_bottom = 231.0

[node name="Reiniciar" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 172.0
margin_right = 340.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "Reiniciar"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 513.0
margin_bottom = 379.0

[node name="Ir al menu" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 162.0
margin_right = 350.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "Ir al menu"

[node name="Pause" type="Button" parent="."]
margin_left = 1028.8
margin_right = 1540.8
margin_bottom = 512.0
rect_scale = Vector2( 0.1, 0.1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/Reiniciar" to="." method="_on_Reiniciar_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/Ir al menu" to="." method="_on_Ir_al_menu_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
